# gnome-magic

./: .eslintrc.json  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  pnpm-lock.yaml
src/: blueprint.ts  extension.ts  helpers.ts  python.ts  symbol_manager.ts  templates.ts
src/blueprint/: formater.ts  lsp.ts
src/gresources/: gresource_link_provider.ts  resources_manager.ts
src/python/: debugger.ts
syntaxes/: blueprint.tmGrammar.json
templates/python/: .gitignore  README.md  meson.build  requirements-devel.txt
templates/python/@snake_project@/: @kebab_project@.in.py  meson.build
templates/python/@snake_project@/backend/: main.py  meson.build
templates/python/@snake_project@/frontend/: meson.build  window.py
templates/python/@snake_project@/frontend/ui/: gresource.xml  meson.build  window.blp
templates/python/build-aux/: @app_id@.Devel.json  @app_id@.json  python3-debugpy.json
templates/python/data/: @app_id@.appdata.xml  @app_id@.desktop  @app_id@.gschema.xml  meson.build
templates/python/data/icons/: meson.build
templates/python/po/: POTFILES  meson.build
templates/python/tools/: flatpak-json2yalm.py  flatpak-pip-generator.py
